--- a/google-sheets-mimic/package.json
+++ b/google-sheets-mimic/package.json
@@ -6,8 +6,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
